# claims_processor_llm_poc

./: .gitignore  .terraform.lock.hcl  README.md  main.tf  terraform.tf  variables.tf
modules/api/: main.tf  variables.tf
modules/dynamodb/: main.tf  outputs.tf  variables.tf
modules/process/: iam.tf  main.tf  variables.tf
modules/s3/: main.tf  outputs.tf
modules/upload/: main.tf  outputs.tf  variables.tf
modules/user-pool/: main.tf  outputs.tf  variables.tf
src/functions/process-claim/: index.py  pyproject.toml
src/functions/process-claim/utils/: processor.py  template_manager.py
src/functions/upload/: index.py  pyproject.toml
